<?xml version="1.0" encoding="utf-8"?>
<!--
/******************************************************************************
 * Copyright 2017 The Baidu Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *****************************************************************************/
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_screen_margin"
                android:layout_marginRight="@dimen/main_screen_margin"
                android:gravity="center_vertical">

    <TextView
        android:id="@+id/info_tv_time"
        android:layout_width="@dimen/dp170"
        android:layout_height="@dimen/dp80"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/default_time"
        android:textColor="#ffffff"
        android:textSize="@dimen/time_text_size" />
    <LinearLayout
        android:id="@+id/info_layout_detail"
        android:layout_width="@dimen/dp170"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/main_screen_margin"
        android:paddingRight="@dimen/main_screen_margin"
        android:layout_alignLeft="@id/info_tv_time"
        android:layout_below="@id/info_tv_time">
        <TextView
            android:id="@+id/info_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/date_text_size"
            android:textColor="@color/sixty_percent_white"
            android:maxLines="1"
            tools:text="@string/default_date"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/info_tv_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/date_text_size"
            android:textColor="@color/sixty_percent_white"
            android:maxLines="1"
            tools:text="@string/friday"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/info_img_weather"
        android:layout_width="@dimen/dp80"
        android:layout_height="@dimen/dp80"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/info_tv_time"
        android:scaleType="center"
        android:src="@drawable/ic_cloudy"/>
    <TextView
        android:id="@+id/info_tv_weather"
        android:layout_width="@dimen/dp80"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/info_layout_detail"
        android:layout_alignLeft="@id/info_img_weather"
        android:text="@string/default_weather"
        android:maxLines="1"
        android:gravity="center_horizontal"
        android:textSize="@dimen/date_text_size"
        android:textColor="@color/sixty_percent_white"/>
</RelativeLayout>